refactor: 优化代码结构并添加词汇集合支持
- 在 global.css 中引入 Tailwind CSS
- 更新 tsconfig.json 以排除特定文件
- 修改笔记页面布局导入路径
- 恢复并完善词汇集合配置
- 重构词汇页面以优化数据渲染流程

--- a/src/pages/notes/[...slug].astro
+++ b/src/pages/notes/[...slug].astro
@@ -1,6 +1,6 @@
 ---
-import { getEntry, type CollectionEntry } from 'astro:content';
-import NotesPostLayout from '../../layouts/NotesPostLayout.astro';
+import { getEntry } from 'astro:content';
+import NotesPostLayout from '../../layouts/Layout.astro';
 
 // 在服务器模式下，我们不使用getStaticPaths
 // 而是在每个请求中直接获取内容
